[tool.poetry]
name = "virustrackerexports"
version = "0.1.0"
description = "environment to retrieve all the data from thevirustracker.com API and to store it on github."
authors = ["yleprince <yrieix.leprince@gmail.com>"]
license = "GNU"

[tool.poetry.dependencies]
python = "^3.7.0"
requests = "2.23.0"
gitpython = "3.1.0"

[tool.poetry.dev-dependencies]
black = "19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
